--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="soundtest.js" defer></script>
+    <script type="module" defer src="button.js"></script>
 </head>
 <body onload="startGame()">
+    <header>
+        <input id="Mybutton" type="button" value="Music"></input>
+    </header>
 </body>
