--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+    <link rel="stylesheet" href="style.css">
+        <div class="header">
+            <h1>Header</h1>
+            <p></p>
+        </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <a href="https://www.facebook.com/BlastGalaxy/"></a>
+    <a href="https://twitter.com/blast_galaxy"></a>
+    <img src="BlastGalaxy-D621HUJQ.png" alt="QR code to the BlastGalaxy website" width="100" height="100">
+    <a href="https://www.facebook.com/BlastGalaxy/"><img src="facebooklogo.png" alt="facebook logo" width="50" height="50"></a>
+    <a href="https://twitter.com/blast_galaxy"><img src="xlogo.avif" alt="X logo" width="50" height="50"></a>
     <script src="soundtest.js" defer></script>
+        
 </head>
 <body onload="startGame()">
 </body>
