--- a/index.html
+++ b/index.html
@@ -6,4 +6,9 @@
     <script src="soundtest.js" defer></script>
 </head>
 <body onload="startGame()">
+    <canvas id="canvas" width="1000" height="1000"></canvas>
+    <div style="display:none;">
+    <img id="source1" src="img/Sprite.png" width="270" height="320">
+    <img id="source2" src="img/Bullet.png" width="310" height="310">
+    </div>
 </body>
