--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
     <script type="module" defer src="button.js"></script>
     <title>BlastGalaxy</title>
 </head>
-<header>
-    <input id="Mybutton" type="button" value="Music"></input>
-    <div class="header">
-        <h1>Header</h1>
-        <p></p>
+<header class="background">
+    <div>
+        <img class="Afbeelding" src="img/BlastGalaxyLogo.PNG" alt="Logo van BlastGalaxy">
     </div>
 </header>
-<body onload="startGame()">
-    <a href="https://www.facebook.com/BlastGalaxy/"></a>
-    <a href="https://twitter.com/blast_galaxy"></a>
-    <img src="BlastGalaxy-D621HUJQ.png" alt="QR code to the BlastGalaxy website" width="100" height="100">
-    <a href="https://www.facebook.com/BlastGalaxy/"><img src="facebooklogo.png" alt="facebook logo" width="50" height="50"></a>
-    <a href="https://twitter.com/blast_galaxy"><img src="xlogo.avif" alt="X logo" width="50" height="50"></a>
+<body class="background" onload="startGame()">
+    <input id="Mybutton" type="button" value="Music"></input>
+    <h1>Game voor BlastGalaxy</h1>
+    <p class="kleur">Hier komt de game</p>
 </body>
+<footer class="witachtergrond">
+    <div class="footer-left">
+        <img src="BlastGalaxy-D621HUJQ.png" alt="QR code to the BlastGalaxy website" width="100" height="100">
+        <a class="plaatje" href="https://www.facebook.com/BlastGalaxy/"></a>
+        <a class="plaatje" href="https://twitter.com/blast_galaxy"></a>
+        <a class="plaatje" href="https://www.facebook.com/BlastGalaxy/"><img src="facebooklogo.png" alt="facebook logo" width="50" height="50"></a>
+        <a class="plaatje" href="https://twitter.com/blast_galaxy"><img src="xlogo.avif" alt="X logo" width="50" height="50"></a>
+    </div>
+    <div class="footer-right">
+        <p class="footerP">Gemaakt door: Bloed zweet & tranen</p>
+    </div>
+</footer>
